[tool.poetry]
name = "idme"
version = "0.1.0"
description = "FastAPI app deployed on Render"
authors = ["Evidence SOG <youremail@example.com>"]
package-mode = false   # prevents Poetry from trying to install your project as a package
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

